feat: create things of collection page defauld sample

--- a/collection.html
+++ b/collection.html
@@ -69,6 +69,192 @@
          </section>
          <section class="collection-section">
             <h2 class="h2-section h2-no-margin">Декор</h2>
+            <div class="collection-things-box">
+               <div class="huge-block">
+                  <img class="huge_img" src="./assets/content/Rectangle 1533.png" alt="" />
+                  <div class="huge_down-block">
+                     <div class="huge-Title-and-price">
+                        <p class="huge_title">Статуэтка настольная Ангел</p>
+                        <p class="huge_price">29 800 <span>₽</span></p>
+                     </div>
+                     <p class="huge_discription">63 см | Золотая</p>
+                  </div>
+                  <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
+               </div>
+               <div class="small-blocks-container">
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="./assets/content/92020-zerkalo-v-azhurnoj-zolotoj-rame 2.png" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title">Стеклянные бутылки</p>
+                        <p class="small_discription">36 см | 5 шт</p>
+                        <p class="small_price">18 500 <span>₽</span></p>
+                     </div>
+                  </div>
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="./assets/content/92020-zerkalo-v-azhurnoj-zolotoj-rame 2 (1).png" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title">Стекляная шары</p>
+                        <p class="small_discription">15 см | Настольные</p>
+                        <p class="small_price">16 750 <span>₽</span></p>
+                     </div>
+                  </div>
+               </div>
+               <div class="huge-block">
+                  <img class="huge_img" src="" alt="" />
+                  <div class="huge_down-block">
+                     <div class="huge-Title-and-price">
+                        <p class="huge_title"></p>
+                        <p class="huge_price"><span>₽</span></p>
+                     </div>
+                     <p class="huge_discription"></p>
+                  </div>
+                  <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
+               </div>
+               <div class="small-blocks-container">
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section class="collection-section">
+            <h2 class="h2-section h2-no-margin">Посуда</h2>
+            <div class="collection-things-box">
+               <div class="huge-block">
+                  <img class="huge_img" src="" alt="" />
+                  <div class="huge_down-block">
+                     <div class="huge-Title-and-price">
+                        <p class="huge_title"></p>
+                        <p class="huge_price"><span>₽</span></p>
+                     </div>
+                     <p class="huge_discription"></p>
+                  </div>
+                  <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
+               </div>
+               <div class="small-blocks-container">
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+               </div>
+               <div class="huge-block">
+                  <img class="huge_img" src="" alt="" />
+                  <div class="huge_down-block">
+                     <div class="huge-Title-and-price">
+                        <p class="huge_title"></p>
+                        <p class="huge_price"><span>₽</span></p>
+                     </div>
+                     <p class="huge_discription"></p>
+                  </div>
+                  <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
+               </div>
+               <div class="small-blocks-container">
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <section class="collection-section">
+            <h2 class="h2-section h2-no-margin">Посуда</h2>
+            <div class="collection-things-box">
+               <div class="huge-block">
+                  <img class="huge_img" src="" alt="" />
+                  <div class="huge_down-block">
+                     <div class="huge-Title-and-price">
+                        <p class="huge_title"></p>
+                        <p class="huge_price"><span>₽</span></p>
+                     </div>
+                     <p class="huge_discription"></p>
+                  </div>
+                  <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
+               </div>
+               <div class="small-blocks-container">
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+               </div>
+               <div class="huge-block">
+                  <img class="huge_img" src="" alt="" />
+                  <div class="huge_down-block">
+                     <div class="huge-Title-and-price">
+                        <p class="huge_title"></p>
+                        <p class="huge_price"><span>₽</span></p>
+                     </div>
+                     <p class="huge_discription"></p>
+                  </div>
+                  <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
+               </div>
+               <div class="small-blocks-container">
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+                  <div class="small-blocks-container_small-block">
+                     <img class="small-img" src="" alt="" />
+                     <div class="small_down-block">
+                        <p class="small_title"></p>
+                        <p class="small_discription"></p>
+                        <p class="small_price"><span>₽</span></p>
+                     </div>
+                  </div>
+               </div>
+            </div>
          </section>
       </main>
       <footer></footer>
