feat: cards of procucts in collection page full fill

--- a/collection.html
+++ b/collection.html
@@ -100,31 +100,31 @@
                   </div>
                </div>
                <div class="huge-block">
-                  <img class="huge_img" src="" alt="" />
+                  <img class="huge_img" src="./assets/content/Rectangle 1860.png" alt="" />
                   <div class="huge_down-block">
                      <div class="huge-Title-and-price">
-                        <p class="huge_title"></p>
-                        <p class="huge_price"><span>₽</span></p>
+                        <p class="huge_title">Набор плоских ваз</p>
+                        <p class="huge_price">10 705 <span>₽</span></p>
                      </div>
-                     <p class="huge_discription"></p>
+                     <p class="huge_discription">4 шт | Коричневые</p>
                   </div>
                   <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
                </div>
                <div class="small-blocks-container">
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-5.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Фигурки человечков</p>
+                        <p class="small_discription">15 см | Золотые</p>
+                        <p class="small_price">34 000 <span>₽</span></p>
                      </div>
                   </div>
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-5.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Подсвечник “Тюльпан”</p>
+                        <p class="small_discription">50 см | Настольный</p>
+                        <p class="small_price">38 900 <span>₽</span></p>
                      </div>
                   </div>
                </div>
@@ -134,123 +134,123 @@
             <h2 class="h2-section h2-no-margin">Посуда</h2>
             <div class="collection-things-box">
                <div class="huge-block">
-                  <img class="huge_img" src="" alt="" />
+                  <img class="huge_img" src="./assets/content/collection-thing-7.png" alt="" />
                   <div class="huge_down-block">
                      <div class="huge-Title-and-price">
-                        <p class="huge_title"></p>
-                        <p class="huge_price"><span>₽</span></p>
+                        <p class="huge_title">Два серебрянных блюда</p>
+                        <p class="huge_price">36 700 <span>₽</span></p>
                      </div>
-                     <p class="huge_discription"></p>
+                     <p class="huge_discription">63 см | 2 шт</p>
                   </div>
                   <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
                </div>
                <div class="small-blocks-container">
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-8.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Ваза в форма ананаса с крышкой</p>
+                        <p class="small_discription">16 см | Зеленая</p>
+                        <p class="small_price">4 500 <span>₽</span></p>
                      </div>
                   </div>
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-9.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Керамические тарелки</p>
+                        <p class="small_discription">16 см | Серые</p>
+                        <p class="small_price">13 900 <span>₽</span></p>
                      </div>
                   </div>
                </div>
                <div class="huge-block">
-                  <img class="huge_img" src="" alt="" />
+                  <img class="huge_img" src="./assets/content/collection-thing-10.png" alt="" />
                   <div class="huge_down-block">
                      <div class="huge-Title-and-price">
-                        <p class="huge_title"></p>
-                        <p class="huge_price"><span>₽</span></p>
+                        <p class="huge_title">Формочки для хранения вещей</p>
+                        <p class="huge_price">29 800 <span>₽</span></p>
                      </div>
-                     <p class="huge_discription"></p>
+                     <p class="huge_discription">15 см | 2 шт</p>
                   </div>
                   <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
                </div>
                <div class="small-blocks-container">
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-11.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Голубой бокал</p>
+                        <p class="small_discription">13 см | 1 шт</p>
+                        <p class="small_price">1 860 <span>₽</span></p>
                      </div>
                   </div>
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-12.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Тарелка</p>
+                        <p class="small_discription">20 см | Настольная</p>
+                        <p class="small_price">2 700 <span>₽</span></p>
                      </div>
                   </div>
                </div>
             </div>
          </section>
          <section class="collection-section">
-            <h2 class="h2-section h2-no-margin">Посуда</h2>
+            <h2 class="h2-section h2-no-margin">Мебель</h2>
             <div class="collection-things-box">
                <div class="huge-block">
-                  <img class="huge_img" src="" alt="" />
+                  <img class="huge_img" src="./assets/content/collection-thing-13.png" alt="" />
                   <div class="huge_down-block">
                      <div class="huge-Title-and-price">
-                        <p class="huge_title"></p>
-                        <p class="huge_price"><span>₽</span></p>
+                        <p class="huge_title">Комод стандартный</p>
+                        <p class="huge_price">29 800 <span>₽</span></p>
                      </div>
-                     <p class="huge_discription"></p>
+                     <p class="huge_discription">90 см | Бежевый</p>
                   </div>
                   <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
                </div>
                <div class="small-blocks-container">
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-14.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Комод небольшой</p>
+                        <p class="small_discription">80 см | Чёрный</p>
+                        <p class="small_price">38 900 <span>₽</span></p>
                      </div>
                   </div>
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-15.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Пуфик</p>
+                        <p class="small_discription">90 см | Синий</p>
+                        <p class="small_price">58 950 <span>₽</span></p>
                      </div>
                   </div>
                </div>
                <div class="huge-block">
-                  <img class="huge_img" src="" alt="" />
+                  <img class="huge_img" src="./assets/content/collection-thing-16.png" alt="" />
                   <div class="huge_down-block">
                      <div class="huge-Title-and-price">
-                        <p class="huge_title"></p>
-                        <p class="huge_price"><span>₽</span></p>
+                        <p class="huge_title">Комод “Винтаж”</p>
+                        <p class="huge_price">86 800 <span>₽</span></p>
                      </div>
-                     <p class="huge_discription"></p>
+                     <p class="huge_discription">150 см | 1 шт</p>
                   </div>
                   <img class="huge_like" src="./assets/icon/like-without-radius.svg" alt="" style="width: 22px" />
                </div>
                <div class="small-blocks-container">
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-17.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Пуфик “Аванти”</p>
+                        <p class="small_discription">65 см | Напольный</p>
+                        <p class="small_price">24 900 <span>₽</span></p>
                      </div>
                   </div>
                   <div class="small-blocks-container_small-block">
-                     <img class="small-img" src="" alt="" />
+                     <img class="small-img" src="./assets/content/collection-thing-18.png" alt="" />
                      <div class="small_down-block">
-                        <p class="small_title"></p>
-                        <p class="small_discription"></p>
-                        <p class="small_price"><span>₽</span></p>
+                        <p class="small_title">Кровать “Аванти”</p>
+                        <p class="small_discription">150х200 см | Серый</p>
+                        <p class="small_price">135 900 <span>₽</span></p>
                      </div>
                   </div>
                </div>
