--- a/collection.html
+++ b/collection.html
@@ -256,8 +256,146 @@
                </div>
             </div>
          </section>
+
+         <section class="accordeon-section">
+            <style></style>
+
+            <div id="accordion" class="accordion">
+               <div class="accordion__item">
+                  <div class="accordion__header">Что такое итальянский дизайн мебели</div>
+                  <div class="accordion__body">
+                     <div class="accordion__content">
+                        Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
+                        акцентов. Постарайтесь держать помещение в порядке и избегать излишеств, чтобы подчеркнуть чистоту и спокойствие этого стиля. <br />
+                        Для скандинавского минимализма типичны нейтральные цвета, такие как белый, серый и бежевый, которые помогают создать ощущение простора и света, а также допускают добавление
+                        ярких акцентов. <br />
+                        Мы предоставляем различные варианты настройки для некоторых из наших аксессуаров, таких как выбор цвета, размера и материала. Пожалуйста, обратитесь к нашему каталогу или
+                        свяжитесь с нами, чтобы узнать о доступных опциях настройки.
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion__item">
+                  <div class="accordion__header">Какая роль освещения в создании атмосферы скандинавского минимализма, и как выбрать подходящие светильники?</div>
+                  <div class="accordion__body">
+                     <div class="accordion__content">
+                        Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
+                        акцентов. Постарайтесь держать помещение в порядке и избегать излишеств, чтобы подчеркнуть чистоту и спокойствие этого стиля. <br />
+                        Для скандинавского минимализма типичны нейтральные цвета, такие как белый, серый и бежевый, которые помогают создать ощущение простора и света, а также допускают добавление
+                        ярких акцентов. <br />
+                        Мы предоставляем различные варианты настройки для некоторых из наших аксессуаров, таких как выбор цвета, размера и материала. Пожалуйста, обратитесь к нашему каталогу или
+                        свяжитесь с нами, чтобы узнать о доступных опциях настройки.
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion__item">
+                  <div class="accordion__header">Какие элементы декора характерны для скандинавского минимализма?</div>
+                  <div class="accordion__body">
+                     <div class="accordion__content">
+                        Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
+                        акцентов. Постарайтесь держать помещение в порядке и избегать излишеств, чтобы подчеркнуть чистоту и спокойствие этого стиля. <br />
+                        Для скандинавского минимализма типичны нейтральные цвета, такие как белый, серый и бежевый, которые помогают создать ощущение простора и света, а также допускают добавление
+                        ярких акцентов. <br />
+                        Мы предоставляем различные варианты настройки для некоторых из наших аксессуаров, таких как выбор цвета, размера и материала. Пожалуйста, обратитесь к нашему каталогу или
+                        свяжитесь с нами, чтобы узнать о доступных опциях настройки.
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion__item">
+                  <div class="accordion__header">Как создать скандинавский минимализм в своем доме?</div>
+                  <div class="accordion__body">
+                     <div class="accordion__content">
+                        Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
+                        акцентов. Постарайтесь держать помещение в порядке и избегать излишеств, чтобы подчеркнуть чистоту и спокойствие этого стиля. <br />
+                        Для скандинавского минимализма типичны нейтральные цвета, такие как белый, серый и бежевый, которые помогают создать ощущение простора и света, а также допускают добавление
+                        ярких акцентов. <br />
+                        Мы предоставляем различные варианты настройки для некоторых из наших аксессуаров, таких как выбор цвета, размера и материала. Пожалуйста, обратитесь к нашему каталогу или
+                        свяжитесь с нами, чтобы узнать о доступных опциях настройки.
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
-      <footer></footer>
+      <footer>
+         <div class="footer_left-side">
+            <img src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
+            <div class="footer_discription">
+               <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
+               <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
+            </div>
+         </div>
+         <div class="footer_rignt-side">
+            <img class="footer-less-600 none" src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Интернет-магазин</h5>
+               <ul class="footer-u-list">
+                  <li><a href="">Акции</a></li>
+                  <li><a href="">Все товары</a></li>
+                  <li><a href="">Лояльность</a></li>
+                  <li><a href="">Доставка и оплата</a></li>
+                  <li><a href="">Новости</a></li>
+               </ul>
+            </div>
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Сервис</h5>
+               <ul class="footer-u-list">
+                  <li><a href="">Помощь</a></li>
+                  <li><a href="">Обратная связь</a></li>
+                  <li><a href="">Адрес магазина</a></li>
+                  <li><a href="">Публичная оферта</a></li>
+               </ul>
+            </div>
+            <div class="line-into-block">
+               <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+               <p class="line_line"></p>
+            </div>
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Контакты</h5>
+               <ul class="footer-u-list">
+                  <li class="footer-tel"><a href="tel:+79137995306">+7 (913) 799-53-06</a></li>
+                  <li><a href="mailto:info@aprioridecor.ru">info@aprioridecor.ru</a></li>
+               </ul>
+            </div>
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Компания</h5>
+               <ul class="footer-u-list">
+                  <li><a href="">О нас</a></li>
+                  <li><a href="">Сотрудничество</a></li>
+                  <li><a href="">Проект для вас</a></li>
+                  <li><a href="">Вакансии</a></li>
+               </ul>
+            </div>
+            <ul class="footer-social-webs">
+               <li>
+                  <a href=""><img src="./assets/icon/footer-whatsup.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/footer-tg.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/footer-ig.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/footer-vk.svg" alt="" /></a>
+               </li>
+            </ul>
+            <ul class="footer-payment">
+               <li>
+                  <a href=""><img src="./assets/icon/Mastercard.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/Visa.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/MIR.svg" alt="" /></a>
+               </li>
+            </ul>
+            <div class="footer_discription footer-less-600 none">
+               <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
+               <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
+            </div>
+         </div>
+      </footer>
    </body>
-   <script src="./js/index.js"></script>
+   <script src="./js/accordeon.js"></script>
 </html>
