--- a/collection.html
+++ b/collection.html
@@ -262,7 +262,10 @@
 
             <div id="accordion" class="accordion">
                <div class="accordion__item">
-                  <div class="accordion__header">Что такое итальянский дизайн мебели</div>
+                  <div class="accordion__header">
+                     <p class="accordion__header_title">Что такое итальянский дизайн мебели</p>
+                     <img class="accordion__header_img" src="./assets/icon/Vector 111.svg" alt="" />
+                  </div>
                   <div class="accordion__body">
                      <div class="accordion__content">
                         Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
@@ -275,7 +278,10 @@
                   </div>
                </div>
                <div class="accordion__item">
-                  <div class="accordion__header">Какая роль освещения в создании атмосферы скандинавского минимализма, и как выбрать подходящие светильники?</div>
+                  <div class="accordion__header">
+                     <p class="accordion__header_title">Какая роль освещения в создании атмосферы скандинавского минимализма, и как выбрать подходящие светильники?</p>
+                     <img class="accordion__header_img" src="./assets/icon/Vector 111.svg" alt="" />
+                  </div>
                   <div class="accordion__body">
                      <div class="accordion__content">
                         Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
@@ -288,7 +294,10 @@
                   </div>
                </div>
                <div class="accordion__item">
-                  <div class="accordion__header">Какие элементы декора характерны для скандинавского минимализма?</div>
+                  <div class="accordion__header">
+                     <p class="accordion__header_title">Какие элементы декора характерны для скандинавского минимализма?</p>
+                     <img class="accordion__header_img" src="./assets/icon/Vector 111.svg" alt="" />
+                  </div>
                   <div class="accordion__body">
                      <div class="accordion__content">
                         Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
@@ -301,7 +310,10 @@
                   </div>
                </div>
                <div class="accordion__item">
-                  <div class="accordion__header">Как создать скандинавский минимализм в своем доме?</div>
+                  <div class="accordion__header">
+                     <p class="accordion__header_title">Как создать скандинавский минимализм в своем доме?</p>
+                     <img class="accordion__header_img" src="./assets/icon/Vector 111.svg" alt="" />
+                  </div>
                   <div class="accordion__body">
                      <div class="accordion__content">
                         Для создания атмосферы скандинавского минимализма вам потребуется пространство, много естественного света, натуральные материалы, функциональная мебель и несколько ярких
