feat: base-style-section adaptive will complete

--- a/collection.html
+++ b/collection.html
@@ -42,24 +42,20 @@
          <section class="base-style-section">
             <div class="base-style-section_left">
                <h2 class="h2-section h2-no-margin">Основа стиля</h2>
-               <div class="base-style-section_left-main">
-                  <p class="base-style_block-1">
-                     Утонченный и функциональный стиль, который приносит в дом чистоту, свежесть и уют. Он вдохновлен природой и северным светом, и его эстетика подчеркивает простоту форм,
-                     естественные материалы и функциональность.
-                  </p>
-                  <p class="base-style_block-2">
-                     Основой скандинавского минимализма является использование светлых оттенков, таких как белый, серый и бежевый, создающих ощущение простора и увеличивающих естественное освещение в
-                     помещении. Нейтральная цветовая палитра также позволяет добавлять яркие акценты, придающие интерьеру индивидуальность.
-                  </p>
-                  <div class="base-style_block-3 base-style_block" style="background-image: url(./assets/content/base-style_block-3.png)"></div>
-                  <p class="base-style_block-4">
-                     Мебель в стиле скандинавского минимализма отличается чистыми линиями и простыми формами. Ее дизайн стремится к функциональности, предоставляя удобство использования и визуальную
-                     легкость. Популярные материалы включают дерево, шерсть, лен и хлопок, которые придают интерьеру теплоту и природную привлекательность.
-                  </p>
-                  <div class="base-style_block-5 base-style_block" style="background-image: url(./assets/content/base-style_block-5.png)"></div>
-               </div>
-            </div>
-            <div class="base-style-section_right">
+               <p class="base-style_block-1">
+                  Утонченный и функциональный стиль, который приносит в дом чистоту, свежесть и уют. Он вдохновлен природой и северным светом, и его эстетика подчеркивает простоту форм, естественные
+                  материалы и функциональность.
+               </p>
+               <p class="base-style_block-2">
+                  Основой скандинавского минимализма является использование светлых оттенков, таких как белый, серый и бежевый, создающих ощущение простора и увеличивающих естественное освещение в
+                  помещении. Нейтральная цветовая палитра также позволяет добавлять яркие акценты, придающие интерьеру индивидуальность.
+               </p>
+               <div class="base-style_block-3 base-style_block" style="background-image: url(./assets/content/base-style_block-3.png)"></div>
+               <p class="base-style_block-4">
+                  Мебель в стиле скандинавского минимализма отличается чистыми линиями и простыми формами. Ее дизайн стремится к функциональности, предоставляя удобство использования и визуальную
+                  легкость. Популярные материалы включают дерево, шерсть, лен и хлопок, которые придают интерьеру теплоту и природную привлекательность.
+               </p>
+               <div class="base-style_block-5 base-style_block" style="background-image: url(./assets/content/base-style_block-5.png)"></div>
                <div class="base-style_block-6 base-style_block" style="background-image: url(./assets/content/base-style_block-6.png)"></div>
                <div class="base-style_block-7 base-style_block" style="background-image: url(./assets/content/base-style_block-7.png)"></div>
                <div class="base-style_block-8 base-style_block" style="background-image: url(./assets/content/base-style_block-8.png)"></div>
