feat: collection adaptive will complete

--- a/collection.html
+++ b/collection.html
@@ -353,8 +353,8 @@
                   <li><a href="">Публичная оферта</a></li>
                </ul>
             </div>
-            <div class="line-into-block">
-               <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+            <div class="line-into-block-footer">
+               <img class="line-into-block-footer_img" src="./assets/icon/Rectangle 1860.svg" alt="" />
                <p class="line_line"></p>
             </div>
             <div class="footer_rignt__ul-box">
