--- a/home.html
+++ b/home.html
@@ -192,7 +192,7 @@
          </section>
 
          <section class="section-default-home">
-            <h2 class="h2-section">Уникальные товары <br />и эксклюзив</h2>
+            <h2 class="h2-section exclusive-point">Уникальные товары <br />и эксклюзив</h2>
             <div class="product-cards-overflow-container">
                <div class="product-cards-container">
                   <div class="product-card">
