--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@
             <h2 class="h2-section">Готовые коллекции <br />и решения</h2>
 
             <div class="panel-container">
-               <div class="panel active" style="background-image: url('./assets/content/Rectangle\ 1537\ \(1\).png')">
+               <div class="panel active" style="background-image: url('./assets/content/wertical-slider-1.jpg')">
                   <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                   <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
                   <span class="vertical-line"></span>
@@ -136,7 +136,7 @@
                      <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
                   </div>
                </div>
-               <div class="panel" style="background-image: url('./assets/content/3-4\ 1.png')">
+               <div class="panel" style="background-image: url('./assets/content/wertical-slider-2.jpg')">
                   <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                   <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
                   <span class="vertical-line"></span>
@@ -149,7 +149,7 @@
                      <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
                   </div>
                </div>
-               <div class="panel" style="background-image: url('./assets/content/1679107618_design-pibig-info-p-pol-v-skandinavskom-interere-dizain-pinter-6\ 1.png')">
+               <div class="panel" style="background-image: url('./assets/content/wertical-slider-3.jpg')">
                   <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                   <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
                   <span class="vertical-line"></span>
@@ -162,7 +162,7 @@
                      <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
                   </div>
                </div>
-               <div class="panel" style="background-image: url('./assets/content/Rectangle\ 1539.png')">
+               <div class="panel" style="background-image: url('./assets/content/wertical-slider-4.jpg')">
                   <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
                   <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
                   <span class="vertical-line"></span>
