feat: product page complete, but without adaptive

--- a/product.html
+++ b/product.html
@@ -106,6 +106,51 @@
                </div>
             </div>
          </section>
+         <section class="section-default p-p-section-2">
+            <div class="product-interior-main-img" style="background-image: url(./assets/content/catalog-item-5.png)"></div>
+            <div class="more-products-interior">
+               <div class="dscription-p-p_text">
+                  <h3 class="dscription-p-p_text__title">
+                     Интерьерные решения <br />
+                     с этим товаром
+                  </h3>
+                  <div class="more-products-interior_product-box">
+                     <div class="more-products-interior_product">
+                        <img class="interior_product-box__img" src="./assets/content/interiour-dop-1.png" alt="" />
+                        <div class="interior_product-box__text-box">
+                           <p class="product-box__text-box___title">Свечи для романтического вечера Wax Lyrical</p>
+                           <p class="product-box__text-box___subtitle">25 см | Терракота</p>
+                        </div>
+                        <div class="interior_product-box__price">
+                           <p class="product-box__price___price">300 <span>₽</span></p>
+                           <p class="product-box__price___price-old zero-opacity">10</p>
+                        </div>
+                     </div>
+                     <div class="more-products-interior_product in-cart">
+                        <img class="interior_product-box__img" src="./assets/content/interiour-dop-2.png" alt="" />
+                        <div class="interior_product-box__text-box">
+                           <p class="product-box__text-box___title">СИнтерьерная подушка в восточном стиле</p>
+                           <p class="product-box__text-box___subtitle">18 см</p>
+                        </div>
+                        <div class="interior_product-box__price">
+                           <img src="./assets/icon/dilete-in-cart.svg" alt="" />
+                        </div>
+                     </div>
+                     <div class="more-products-interior_product">
+                        <img class="interior_product-box__img" src="./assets/content/interiour-dop-3.png" alt="" />
+                        <div class="interior_product-box__text-box">
+                           <p class="product-box__text-box___title">Лампа настольная Розовый Зефир</p>
+                           <p class="product-box__text-box___subtitle">63 см | Фарфор</p>
+                        </div>
+                        <div class="interior_product-box__price">
+                           <p class="product-box__price___price">29 800 <span>₽</span></p>
+                           <p class="product-box__price___price-old opacity">51 900 ₽</p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       <footer>
          <div class="footer_left-side">
